[metadata]
name = stun-protocol
version = 0.0.6
author = Carl Nathan Buckles
author_email = nbuckles@gmail.com
description = A package for creating, parsing, and serializing STUN (RFC8489) packets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nbuckles13/python-stun-protocol
project_urls =
    Bug Tracker = https://github.com/nbuckles13/python-stun-protocol/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .